# azure-sphere-mcp9600

./: README.md  mcp9600.cpp  mcp9600.h
examples/thermometer/: CMakeLists.txt  app_manifest.json  main.cpp
